[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fed-marl-single"
version = "0.1.2"
description = "Gymnasium-compatible single-environment for federated MARL demos (flexible grid & agent count)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Sreejeet Maity"}]
keywords = ["gymnasium", "reinforcement learning", "multi-agent", "federated", "pygame"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.20",
  "pygame>=2.1",
  "pillow>=9.0"
]

[project.urls]
Homepage = "https://test.pypi.org/project/fed-marl-single/"